<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
        <item

                android:id="@+id/nav_busReminder"
                android:icon="@drawable/bus_reminder"
                android:title="@string/busGeofence"
                android:checked="true" />
        <item
                android:id="@+id/nav_schedule"
                android:icon="@drawable/bus_schedule"
                android:title="@string/settings" />
        <item
                android:id="@+id/nav_route"
                android:icon="@drawable/route_stoppage"
                android:title="@string/route" />

        <item
            android:id="@+id/nav_locationAlarm"
            android:icon="@drawable/loc_alarm"
            android:title="@string/locationAlarm" />



        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/admin_settings"
            android:title="@string/admin_settings" />

        <item
            android:id="@+id/nav_busAdmin"
            android:icon="@drawable/bus_admin"
            android:title="@string/bus_admin" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/bus_admin" />


        <item
            android:id="@+id/nav_turnoff"
            android:icon="@drawable/turnoff"
            android:title="@string/turn_off" />



    </group>
</menu>