<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeofenceSettings1">

    <FrameLayout
        android:layout_weight="100"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:ignore="Suspicious0dp">

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_marginTop="100dp"
          app:cardCornerRadius="20dp">

          <fragment

              android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
              android:id="@+id/autocomplete_fragment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />


      </android.support.v7.widget.CardView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabloc2"
            android:layout_gravity="right|top"
            android:layout_marginRight="8dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/my_location" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/textinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold|normal"
            android:textColor="@color/border"
            android:text="hello world"/>

        <ImageView

            android:layout_centerInParent="true"
            android:id="@+id/marker"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/marker_content_description"
            android:src="@drawable/marker_draw" />


    </FrameLayout>



        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#ffffff"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instructionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"
                android:textSize="18sp"
                tools:text="@string/instruction_where_description" />

            <TextView
                android:id="@+id/instructionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/instruction_where_subtitle_description" />

            <TextView
                android:id="@+id/radiusDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                tools:text="100 meters" />

            <SeekBar
                android:id="@+id/radiusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:progress="2" />



            <Button
                android:id="@+id/continue1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/signbutton_back"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/continue_description"
                android:textColor="@color/white" />

        </LinearLayout>



</LinearLayout>